# python-project-49

./: .gitignore  Makefile  README.md  cli.py  demo.cast  pyproject.toml
brain_games/: cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_games.py
python-project-49/: README.md
python-project-49/brain_games/games/: brain_calc.py  brain_prime.py  brain_progression.py
scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
